--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
   
 </head>
 <body>
+	<a href="/users/sign_in">Sign in</a> | <a href="/users/sign_out" data-method = "delete">Sign out</a>
 
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
 <%= yield %>
 
