--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,10 @@
 
 	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-<%= yield %>
+
+  <div class="content">
+    <%= yield %>
+  </div>
 
 <footer>
   <div class="conteiner">
